crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__hun-conversation.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "hun"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "hun"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Investigator",
            "speaker_code": "BRI"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;06.29",
        "corpus": "MacWhinney",
        "language": [
          "hun"
        ],
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "MacWhinney",
        "language": [
          "hun"
        ],
        "role": "Investigator",
        "speaker": "BRI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Hungarian child-investigator interaction with toys",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: Hungarian language coverage, Latin script with diacritics",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "Nom"
                  ],
                  "lemma": "otta",
                  "pos": "propn"
                }
              },
              {
                "main": {
                  "features": [
                    "Nom"
                  ],
                  "lemma": "bácsi",
                  "pos": "noun"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "FLAT-NAME"
              },
              {
                "head": 1,
                "index": 3,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "otta",
              "content": [
                {
                  "content": "otta",
                  "type": "text"
                }
              ],
              "raw_text": "otta",
              "type": "word"
            },
            {
              "cleaned_text": "bácsi",
              "content": [
                {
                  "content": "bácsi",
                  "type": "text"
                }
              ],
              "raw_text": "bácsi",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "Nom"
                  ],
                  "lemma": "maci",
                  "pos": "noun"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "maci",
              "content": [
                {
                  "content": "maci",
                  "type": "text"
                }
              ],
              "raw_text": "maci",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "Fin",
                    "Ind",
                    "Pres",
                    "P1"
                  ],
                  "lemma": "megy",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "features": [
                    "Def",
                    "Art"
                  ],
                  "lemma": "a",
                  "pos": "det"
                }
              },
              {
                "main": {
                  "features": [
                    "All"
                  ],
                  "lemma": "rádioh",
                  "pos": "noun"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 3,
                "index": 2,
                "relation": "DET"
              },
              {
                "head": 1,
                "index": 3,
                "relation": "NSUBJ"
              },
              {
                "head": 1,
                "index": 4,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "menjünk",
              "content": [
                {
                  "content": "menjünk",
                  "type": "text"
                }
              ],
              "raw_text": "menjünk",
              "type": "word"
            },
            {
              "cleaned_text": "a",
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "type": "word"
            },
            {
              "cleaned_text": "rádiohoz",
              "content": [
                {
                  "content": "rádiohoz",
                  "type": "text"
                }
              ],
              "raw_text": "rádiohoz",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "BRI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "Nom",
                    "S1"
                  ],
                  "lemma": "jó",
                  "pos": "adj"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "jó",
              "content": [
                {
                  "content": "jó",
                  "type": "text"
                }
              ],
              "raw_text": "jó",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "Fin",
                    "Ind",
                    "Past",
                    "S3"
                  ],
                  "lemma": "jön",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "features": [
                    "Dem",
                    "Nom",
                    "S3"
                  ],
                  "lemma": "az",
                  "pos": "pron"
                }
              },
              {
                "main": {
                  "features": [
                    "Def",
                    "Art"
                  ],
                  "lemma": "az",
                  "pos": "det"
                }
              },
              {
                "main": {
                  "features": [
                    "Nom"
                  ],
                  "lemma": "anyuci",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "features": [
                    "Fin",
                    "Ind",
                    "Pres",
                    "S3"
                  ],
                  "lemma": "nincs",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "features": [
                    "Acc"
                  ],
                  "lemma": "ement",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "lemma": "ott",
                  "pos": "adv"
                }
              },
              {
                "main": {
                  "lemma": "kint",
                  "pos": "adv"
                }
              },
              {
                "main": {
                  "features": [
                    "Def",
                    "Art"
                  ],
                  "lemma": "az",
                  "pos": "det"
                }
              },
              {
                "main": {
                  "features": [
                    "Nom"
                  ],
                  "lemma": "anyuci",
                  "pos": "noun"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "NSUBJ"
              },
              {
                "head": 4,
                "index": 3,
                "relation": "DET"
              },
              {
                "head": 5,
                "index": 4,
                "relation": "NSUBJ"
              },
              {
                "head": 1,
                "index": 5,
                "relation": "CONJ"
              },
              {
                "head": 5,
                "index": 6,
                "relation": "NSUBJ"
              },
              {
                "head": 8,
                "index": 7,
                "relation": "ADVMOD-MODE"
              },
              {
                "head": 5,
                "index": 8,
                "relation": "ADVMOD-LOCY"
              },
              {
                "head": 10,
                "index": 9,
                "relation": "DET"
              },
              {
                "head": 5,
                "index": 10,
                "relation": "NSUBJ"
              },
              {
                "head": 1,
                "index": 11,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "jött",
              "content": [
                {
                  "content": "jött",
                  "type": "text"
                }
              ],
              "raw_text": "jött",
              "type": "word"
            },
            {
              "cleaned_text": "az",
              "content": [
                {
                  "content": "az",
                  "type": "text"
                }
              ],
              "raw_text": "az",
              "type": "word"
            },
            {
              "cleaned_text": "az",
              "content": [
                {
                  "content": "az",
                  "type": "text"
                }
              ],
              "raw_text": "az",
              "type": "word"
            },
            {
              "cleaned_text": "anyuci",
              "content": [
                {
                  "content": "anyuci",
                  "type": "text"
                }
              ],
              "raw_text": "anyuci",
              "type": "word"
            },
            {
              "duration": {
                "type": "short"
              },
              "type": "pause"
            },
            {
              "cleaned_text": "nincs",
              "content": [
                {
                  "content": "nincs",
                  "type": "text"
                }
              ],
              "raw_text": "nincs",
              "type": "word"
            },
            {
              "duration": {
                "type": "short"
              },
              "type": "pause"
            },
            {
              "cleaned_text": "ement",
              "content": [
                {
                  "content": "ement",
                  "type": "text"
                }
              ],
              "raw_text": "ement",
              "type": "word"
            },
            {
              "duration": {
                "type": "short"
              },
              "type": "pause"
            },
            {
              "cleaned_text": "ott",
              "content": [
                {
                  "content": "ott",
                  "type": "text"
                }
              ],
              "raw_text": "ott",
              "type": "word"
            },
            {
              "cleaned_text": "kint",
              "content": [
                {
                  "content": "kint",
                  "type": "text"
                }
              ],
              "raw_text": "kint",
              "type": "word"
            },
            {
              "cleaned_text": "az",
              "content": [
                {
                  "content": "az",
                  "type": "text"
                }
              ],
              "raw_text": "az",
              "type": "word"
            },
            {
              "cleaned_text": "anyuci",
              "content": [
                {
                  "content": "anyuci",
                  "type": "text"
                }
              ],
              "raw_text": "anyuci",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "BRI": {
      "birth_date": null,
      "code": "BRI",
      "id": {
        "corpus": "MacWhinney",
        "language": [
          "hun"
        ],
        "role": "Investigator",
        "speaker": "BRI"
      },
      "name": null,
      "role": "Investigator"
    },
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;06.29",
        "corpus": "MacWhinney",
        "language": [
          "hun"
        ],
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Target_Child"
    }
  }
}
