crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__hyphen-words.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "he",
                  "type": "text"
                }
              ],
              "raw_text": "he",
              "span": {
                "end": 156,
                "start": 154
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "saw",
                  "type": "text"
                }
              ],
              "raw_text": "saw",
              "span": {
                "end": 160,
                "start": 157
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "span": {
                "end": 164,
                "start": 161
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "jack-in-the-box",
                  "type": "text"
                }
              ],
              "raw_text": "jack-in-the-box",
              "span": {
                "end": 180,
                "start": 165
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "in",
                  "type": "text"
                }
              ],
              "raw_text": "in",
              "span": {
                "end": 183,
                "start": 181
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "an",
                  "type": "text"
                }
              ],
              "raw_text": "an",
              "span": {
                "end": 186,
                "start": 184
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "all-too-human",
                  "type": "text"
                }
              ],
              "raw_text": "all-too-human",
              "span": {
                "end": 200,
                "start": 187
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "way",
                  "type": "text"
                }
              ],
              "raw_text": "way",
              "span": {
                "end": 204,
                "start": 201
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
